# ml-project-template

./: .dockerignore  .gitignore  compose.yml  pyproject.toml
environments/: Dockerfile
